--- a/style.css
+++ b/style.css
@@ -2,16 +2,18 @@
     margin: 0;
     padding: 0;
 }
+body{
+    background: linear-gradient(203.57deg, #ADD8FF -8.99%, rgba(173, 216, 255, 0.28) 111.42%);
+}
 .Container{
     height: 70vh;
     width: 35vh;
     border-radius: 20px 20px 20px 20px;
-    background-color: #404258;
+    background: linear-gradient(191.34deg, #17181A -4.95%, #17181A 103.74%);
     margin-left: 540px;
     margin-top: 140px;
 }
 .result{
-    background-color:#404258 ;
     width: 100%;
     height: 150px;
     border-radius: 20px 20px 0 0;
@@ -28,7 +30,6 @@
     display: grid;
     height: 67.6%;
     border-radius: 20px 20px 20px 20px;
-    background-color: #474E68;
     grid-template-columns:repeat(4,45px);
     grid-template-rows: repeat(5,45px);
     column-gap: 10px;
@@ -39,8 +40,8 @@
 }
 .item{
     box-shadow: inset -5px -5px 12px rgba(0,0,0,.10);
-    color: white;
-    background-color: #50577A;
+    color: #29A8FF;
+    background-color: #303136;
     border: none;
     border-radius: 30%;
     font-size: 20px;
@@ -52,16 +53,17 @@
 }
 .item1{
     color: #222222;
-    background-color: #FFC93C;
+    background-color: #005DB2;
 }
 .item2{
     color: #222222;
     font-size: 30px;
-    background-color: #FFC93C;
+    background-color: #005DB2;
 }
 .equals{
     grid-column-start: 3;
     grid-column-end: 5;
+    background-color: #1991FF;
 }
 
 @media (min-width:300px) and (max-width:1000px){
